[package]
name = "rust-wasm-filter"
version = "0.1.0"
authors = ["Robert Panzer <rpanzer@walmartlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.11"
proxy-wasm = "0.1.3"
